package com.vendorpov.Products.data;

import java.math.BigDecimal;
import java.util.Collection;
import java.util.List;

import jakarta.persistence.CascadeType;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.FetchType;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.JoinTable;
import jakarta.persistence.ManyToMany;
import jakarta.persistence.ManyToOne;
import jakarta.persistence.OneToMany;

@Entity(name = "product_variants")
public class ProductVariantEntity extends BaseEntity {

	private static final long serialVersionUID = 6804025714291183439L;

	@Column(length = 50, nullable = false)
	private String variantSku;
	@Column(precision = 10, scale = 2)
	private BigDecimal retailPrice;
	@Column(precision = 5, scale = 4)
	private BigDecimal taxRate;
	@ManyToMany(cascade = { CascadeType.PERSIST, CascadeType.MERGE }, fetch = FetchType.EAGER)
	@JoinTable(name = "product_variant_attributes", joinColumns = @JoinColumn(name = "product_variant_id", referencedColumnName = "id"), inverseJoinColumns = @JoinColumn(name = "product_attribute_id", referencedColumnName = "id"))
	private Collection<ProductAttributeEntity> productAttributes;
	@ManyToOne
	@JoinColumn(name = "product_id")
	private ProductEntity product;
	@OneToMany(mappedBy = "productVariant", cascade = CascadeType.ALL, orphanRemoval = true)
	private List<SupplierProductVariantEntity> supplierProductVariants;
	@OneToMany(mappedBy = "productVariant", cascade = CascadeType.ALL, orphanRemoval = true)
	private List<InventoryEntity> inventories;
//	@OneToMany(mappedBy = "productVariant", cascade = CascadeType.ALL, orphanRemoval = true)
//	private List<SaleLineItemEntity> saleLineItems;

	public String getVariantSku() {
		return variantSku;
	}

	public void setVariantSku(String variantSku) {
		this.variantSku = variantSku;
	}

	public BigDecimal getRetailPrice() {
		return retailPrice;
	}

	public void setRetailPrice(BigDecimal retailPrice) {
		this.retailPrice = retailPrice;
	}

	public BigDecimal getTaxRate() {
		return taxRate;
	}

	public void setTaxRate(BigDecimal taxRate) {
		this.taxRate = taxRate;
	}

	public Collection<ProductAttributeEntity> getProductAttributes() {
		return productAttributes;
	}

	public void setProductAttributes(Collection<ProductAttributeEntity> productAttributes) {
		this.productAttributes = productAttributes;
	}

	public ProductEntity getProduct() {
		return product;
	}

	public void setProduct(ProductEntity product) {
		this.product = product;
	}

	public List<SupplierProductVariantEntity> getSupplierProductVariants() {
		return supplierProductVariants;
	}

	public void setSupplierProductVariants(List<SupplierProductVariantEntity> supplierProductVariants) {
		this.supplierProductVariants = supplierProductVariants;
	}

	public List<InventoryEntity> getInventories() {
		return inventories;
	}

	public void setInventories(List<InventoryEntity> inventories) {
		this.inventories = inventories;
	}

//	public List<SaleLineItemEntity> getSaleLineItems() {
//		return saleLineItems;
//	}
//
//	public void setSaleLineItems(List<SaleLineItemEntity> saleLineItems) {
//		this.saleLineItems = saleLineItems;
//	}

}